# Backpack-scripts

./: .gitignore  README.md  main.py  migrate_to_i18n.py  migrate_to_i18n_v2.py  migrate_to_i18n_v3.py  migrate_utils_i18n.py  pyproject.toml  requirements.txt  test_api_fallback.py  test_api_fallback_check.py  test_count_days.py  test_load_and_compute.py  test_rsi_fallback.py  test_strategy.py
Backpack-With-PGSQL/: bot_pgsql.py  create-database.sql  fetch_top_volume_symbols.py  pgsql-ohlcv.py  symbol.lst
ScriptDatabase/: backfill_pgsql.py  create_database.sql  pgsql.py  pgsql_markets.py  pgsql_ohlcv.py
V2/: main.py  requirements.txt
With_PGSQL/: bot_pgsql.py  pgsql_ohlcv.py
backpack_public/: get-markets-early.py  ohlcv_utils.py  public.py
backtest/: backtest_engine.py  backtest_engine2.py
backtest /: backtest_engine.py
bot/: bot_AutoBreakouMacdRsi-v2.py  bot_AutoBreakouMacdRsi.py  bot_BreakoutMacdRsi.py  bot_breakout.py  bot_orderbook.py
config/: settings.py  settings.template.yaml  settings.yaml
dashboard/: textdashboard.py
database/: database_symbol.py
debug/: debug_kaito.py
execute/: async_wrappers.py  close_position.py  close_position_percent.py  open_position_perp_tpsl.py  open_position_usdc.py  open_position_usdc_tpsl.py
indicators/: combined_indicators.py  range_indicators.py  rsi_calculator.py
list/: balances.py  borrow-lend.py  collateral.py  get-account.py  list_symbols.py  opened_positions.py  orderbook.py  orderbook_average.py  orderbook_signal.py  rsi.py
live/: live_engine.py  live_engine.py.backup  live_engine.py.backup_v2  (+1 more)
(+108 files in other folders)
