[project]
name = "Backpack bot"
version = "0.2.0"
description = "Trading bot for Backpack Exchange"
authors = [
    { name="LostInTheBugs", email="" }
]
requires-python = ">=3.10"

[project.dependencies]
asyncpg = ">=0.28.0"
pandas = ">=2.0.0"
requests = ">=2.31.0"
websockets = ">=11.0"
aiohttp = ">=3.8.0"
ta = ">=0.10.2"
pydantic = {version = ">=2.5.0", extras = ["dotenv"]}
pydantic-settings = "*"
PyYAML = ">=6.0.1"
pytz = ">=2023.3"
tabulate = ">=0.9.0"

[project.optional-dependencies]
ml_features = ["scikit-learn>=1.3.0"]        # machine learning (Phase 2)
visualization = ["plotly>=5.15.0"]           # graphics (Phase 3)
web_dashboard = ["fastapi>=0.104.0", "uvicorn>=0.23.0"]  # dashboard web (Phase 4)

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"